lattice gas method

--- a/LatticeGas/LatticeGas/LatticeGas.vcxproj
+++ b/LatticeGas/LatticeGas/LatticeGas.vcxproj
@@ -19,7 +19,13 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="lattice.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="shared.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="lattice.h" />
+    <ClInclude Include="shared.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
